Squash yet another duplicate accounts bug

Sometimes when we write to settings, it can happen before we even set
the username and other important information. Now let's try to stop
writing malformed settings because they are going to be useless anyway.
This prevents another instance where many duplicate accounts can form.

BUG: 466440